; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad_wgl.c_has_ext.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad_wgl.c_has_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLADWGLhdc = common dso_local global i64 0, align 8
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @has_ext to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @has_ext(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i64, i64* @GLADWGLhdc, align 8
  %8 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i8* (...) @wglGetExtensionsStringEXT()
  store i8* %11, i8** %6, align 8
  br label %15

12:                                               ; preds = %1
  %13 = load i64, i64* @GLADWGLhdc, align 8
  %14 = call i8* @wglGetExtensionsStringARB(i64 %13)
  store i8* %14, i8** %6, align 8
  br label %15

15:                                               ; preds = %12, %10
  %16 = load i8*, i8** %6, align 8
  %17 = icmp eq i8* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %15
  %19 = load i8*, i8** %3, align 8
  %20 = icmp eq i8* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %18, %15
  store i32 0, i32* %2, align 4
  br label %59

22:                                               ; preds = %18
  br label %23

23:                                               ; preds = %22, %56
  %24 = load i8*, i8** %6, align 8
  %25 = load i8*, i8** %3, align 8
  %26 = call i8* @strstr(i8* %24, i8* %25)
  store i8* %26, i8** %5, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = icmp eq i8* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  br label %58

30:                                               ; preds = %23
  %31 = load i8*, i8** %5, align 8
  %32 = load i8*, i8** %3, align 8
  %33 = call i32 @strlen(i8* %32)
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i8, i8* %31, i64 %34
  store i8* %35, i8** %4, align 8
  %36 = load i8*, i8** %5, align 8
  %37 = load i8*, i8** %6, align 8
  %38 = icmp eq i8* %36, %37
  br i1 %38, label %45, label %39

39:                                               ; preds = %30
  %40 = load i8*, i8** %5, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 -1
  %42 = load i8, i8* %41, align 1
  %43 = sext i8 %42 to i32
  %44 = icmp eq i32 %43, 32
  br i1 %44, label %45, label %56

45:                                               ; preds = %39, %30
  %46 = load i8*, i8** %4, align 8
  %47 = load i8, i8* %46, align 1
  %48 = sext i8 %47 to i32
  %49 = icmp eq i32 %48, 32
  br i1 %49, label %55, label %50

50:                                               ; preds = %45
  %51 = load i8*, i8** %4, align 8
  %52 = load i8, i8* %51, align 1
  %53 = sext i8 %52 to i32
  %54 = icmp eq i32 %53, 0
  br i1 %54, label %55, label %56

55:                                               ; preds = %50, %45
  store i32 1, i32* %2, align 4
  br label %59

56:                                               ; preds = %50, %39
  %57 = load i8*, i8** %4, align 8
  store i8* %57, i8** %6, align 8
  br label %23

58:                                               ; preds = %29
  store i32 0, i32* %2, align 4
  br label %59

59:                                               ; preds = %58, %55, %21
  %60 = load i32, i32* %2, align 4
  ret i32 %60
}

declare dso_local i8* @wglGetExtensionsStringEXT(...) #1

declare dso_local i8* @wglGetExtensionsStringARB(i64) #1

declare dso_local i8* @strstr(i8*, i8*) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
